[28-07-2025] - Application: Update Properties.